$Id: History,v 1.24 2001-05-31 17:35:50 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

May 31, 2001  G. Cosmo                     geommng-V03-01-04
- Adopt explicit initialisation for 'minExtents' and 'maxExtents'
  in G4SmartVoxelHeader::BuildNodes(...), to allow porting on ObjectSpace STL.

May 23, 2001  G. Cosmo                     geommng-V03-01-03
- G4SmartVoxelHeader.cc: minor fix for removing pedantic warnings
  detected on Linux-g++ with ISO/ANSI setup.

May 03, 2001  G. Cosmo                     geommng-V03-01-02
- G4DrawVoxels.cc: migration to STL vector according to changes in
  graphics_reps module (greps-V03-01-01), now migrated as well.

April 27, 2001  G. Cosmo                   geommng-V03-01-01
- G4LogicalVolume.cc, G4SmartVoxelHeader.cc: fixed compilation warnings
  on HP-UX, concerning potential uninitialised vector elements.

April 20, 2001  G. Cosmo                   geommng-V03-01-00
- Migration to STL vector:
  o G4VSolid: migrated G4ThreeVectorList typedef.
  o G4SolidStore, G4LogicalVolumeStore, G4PhysicalVolumeStore: migrated
    inheritance from base collection of pointers.
  o G4LogicalVolume: migrated data member "fDaughters".